cmake_minimum_required(VERSION 3.10)
project(Mondis)

set(CMAKE_CXX_STANDARD 17)
AUX_SOURCE_DIRECTORY(src SRC_DIRS)
IF (WIN32)
    include_directories("D:\\protobuf-3.7.1\\src")
    LINK_DIRECTORIES("D:\\protobuf-3.7.1\\cmake\\bin")
elseif(UNIX)
    include_directories("/usr/local/include")
ENDIF()
add_compile_options(-w -o2 -mthreads -D_GLIBCXX_HAS_GTHREADS -D_GLIBCXX_USE_C99_STDINT_TR1 -D_GLIBCXX_USE_NANOSLEEP)
if(UNIX)
    set(CMAKE_EXE_LINKER_FLAGS -dynamic)
endif()
add_executable(Mondis ${SRC_DIRS})
IF (WIN32)
    target_link_libraries(Mondis ws2_32 protobuf)
ELSEIF(UNIX)
    target_link_libraries(Mondis pthread protobuf)
ENDIF ()